removed relative paths

--- a/events.html
+++ b/events.html
@@ -4,12 +4,12 @@
 		<title>Events</title><meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION" />
 <meta property="og:title" content="Events" />
 <meta property="og:description" content="The default Freelancers Union experience: Four squads of infantry led by our best platoon- and squad leaders in accordance with our outfit standards and -traditions." />
-<meta property="og:image" content="https://www.fugaming.org/uploads/pslogo1417p.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/assist-ribbon.webp" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/valk-ribbon.webp" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/galaxy-vehicle-ribbon.webp" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/mbt-vehicle-ribbon.webp" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/ts-logo-vertical-rgb.png" />
+<meta property="og:image" content="/uploads/pslogo1417p.png" />
+<meta property="og:image" content="/uploads/assist-ribbon.webp" />
+<meta property="og:image" content="/uploads/valk-ribbon.webp" />
+<meta property="og:image" content="/uploads/galaxy-vehicle-ribbon.webp" />
+<meta property="og:image" content="/uploads/mbt-vehicle-ribbon.webp" />
+<meta property="og:image" content="/uploads/ts-logo-vertical-rgb.png" />
 <meta property="og:url" content="https://www.fugaming.org/events.html" />
 
 
