--- a/join-us.html
+++ b/join-us.html
@@ -4,12 +4,12 @@
 		<title>Join Us</title><meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION" />
 <meta property="og:title" content="Join Us" />
 <meta property="og:description" content="Teamspeak is our main voice communications platform and our sponsor. During game-play everyone is expected to be on Teamspeak 3." />
-<meta property="og:image" content="https://www.fugaming.org/uploads/pslogo1417p.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/ts-logo-horizontal-rgb.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/discord-logo-color.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/oshur-poster_orig.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/editor/arma3-white-1280x800.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/ts-logo-vertical-rgb.png" />
+<meta property="og:image" content="/uploads/pslogo1417p.png" />
+<meta property="og:image" content="/uploads/ts-logo-horizontal-rgb.png" />
+<meta property="og:image" content="/uploads/discord-logo-color.png" />
+<meta property="og:image" content="/uploads/oshur-poster_orig.png" />
+<meta property="og:image" content="/uploads/editor/arma3-white-1280x800.png" />
+<meta property="og:image" content="/uploads/ts-logo-vertical-rgb.png" />
 <meta property="og:url" content="https://www.fugaming.org/join-us.html" />
 
 
