--- a/merchandise.html
+++ b/merchandise.html
@@ -4,8 +4,8 @@
 		<title>Merchandise</title><meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION" />
 <meta property="og:title" content="Merchandise" />
 <meta property="og:description" content="Images above courtesy of Rogue Planet Games The Freelancers Union Gaming Organization is proudly  Sponsored by Teamspeak © 2021 Freelancers Union Gaming Organization" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/pslogo1417p.png" />
-<meta property="og:image" content="https://www.fugaming.org/uploads/ts-logo-vertical-rgb.png" />
+<meta property="og:image" content="/uploads/pslogo1417p.png" />
+<meta property="og:image" content="/uploads/ts-logo-vertical-rgb.png" />
 <meta property="og:url" content="https://www.fugaming.org/merchandise.html" />
 
 
