--- a/join-us.html
+++ b/join-us.html
@@ -139,7 +139,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="nav desktop-nav"><ul class="wsite-menu-default">
 		<li id="pg767375547431588406" class="wsite-menu-item-wrap">
 			<a
-						href="/home.html"
+						href="/index.html"
 				class="wsite-menu-item"
 				>
 				Home
@@ -704,7 +704,7 @@ ts3v_display.init(ts3v_url_1, 1119671, 100);
     <ul class="wsite-menu-default">
     		<li id="pg767375547431588406" class="wsite-menu-item-wrap">
     			<a
-    						href="/home.html"
+    						href="/index.html"
     				class="wsite-menu-item"
     				>
     				Home
