--- a/merchandise.html
+++ b/merchandise.html
@@ -135,7 +135,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
           <div class="nav desktop-nav"><ul class="wsite-menu-default">
 		<li id="pg767375547431588406" class="wsite-menu-item-wrap">
 			<a
-						href="/"
+						href="/index.html"
 				class="wsite-menu-item"
 				>
 				Home
