--- a/training.html
+++ b/training.html
@@ -274,7 +274,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </span></div>
           <div class="nav desktop-nav"><ul class="wsite-menu-default">
 		<li id="pg767375547431588406" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
-			<a href="/home.html" class="wsite-menu-item" style="position: relative;">
+			<a href="/index.html" class="wsite-menu-item" style="position: relative;">
 				Home
 			</a>
 			
