revert site.url changes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<title>Home</title><meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION" />
 <meta property="og:title" content="FREELANCERS UNION GAMING ORGANIZATION" />
 <meta property="og:description" content="The Freelancers Union is a multi-game community with multiple activities every week for all of our games." />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/pslogo1417p.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/oshur-poster_orig.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/arma3-white-1280x800.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/artboard-24.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/artboard-2.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/artboard-4.png" />
-<meta property="og:image" content="{{ site.baseurl }}/uploads/ts-logo-vertical-rgb.png" />
+<meta property="og:image" content="/uploads/pslogo1417p.png" />
+<meta property="og:image" content="/uploads/oshur-poster_orig.png" />
+<meta property="og:image" content="/uploads/arma3-white-1280x800.png" />
+<meta property="og:image" content="/uploads/artboard-24.png" />
+<meta property="og:image" content="/uploads/artboard-2.png" />
+<meta property="og:image" content="/uploads/artboard-4.png" />
+<meta property="og:image" content="/uploads/ts-logo-vertical-rgb.png" />
 <meta property="og:url" content="https://www.fugaming.org/" />
 
 <meta name="description" content="The Freelancers Union is a multi-game community with multiple activities every week for all of our games." />
