--- a/training.html
+++ b/training.html
@@ -493,7 +493,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:5px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href="https://teamspeak.com/en/?utm_source=sponsor&amp;utm_campaign=the-freelancers-union-gaming-organization" target="_blank">
-<img src="Training_files/ts-logo-vertical-rgb.png" alt="Picture" style="width:108;max-width:100%">
+<img src="uploads/ts-logo-vertical-rgb.png" alt="Picture" style="width:108;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -558,10 +558,10 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     </ul>
   </div>
 
-	<script type="text/javascript" src="Training_files/plugins.js"></script>
+	<script type="text/javascript" src="files/themes/plugins.js"></script>
   <script type="text/javascript" src="files/theme/custom.js"></script>
     <div id="customer-accounts-app"></div>
-    <script src="Training_files/main-customer-accounts-site.js"></script>
+    <script src="files/main-customer-accounts-site.js"></script>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async="" src="files/js"></script>
