--- a/training.html
+++ b/training.html
@@ -368,7 +368,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div class="wsite-youtube" style="margin-bottom:10px;margin-top:10px;"><div class="wsite-youtube-wrapper wsite-youtube-size-large wsite-youtube-align-left">
 <div class="wsite-youtube-container">
 
-<iframe src="files/Pad14x2Npzs.htm" allowfullscreen="" frameborder="0"></iframe>
+	<iframe width="1903" height="758" src="https://www.youtube.com/embed/Pad14x2Npzs" title="Freelancers Union – Leadership module" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </div></div>
 
