removed contact page link from training page

--- a/training.html
+++ b/training.html
@@ -245,7 +245,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 	
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
-			[{"id":"767375547431588406","title":"Home","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"293859289571949162","title":"Join Us","url":"join-us.html","target":"","nav_menu":false,"nonclickable":false},{"id":"483755826367466383","title":"Events","url":"events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"128775996987507720","title":"Training","url":"training.html","target":"","nav_menu":false,"nonclickable":false},{"id":"816957197570644798","title":"Merchandise","url":"merchandise.html","target":"","nav_menu":false,"nonclickable":false},{"id":"541476694572481837","title":"Contact \/ Feedback","url":"contact--feedback.html","target":"","nav_menu":false,"nonclickable":false}],
+			[{"id":"767375547431588406","title":"Home","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"293859289571949162","title":"Join Us","url":"join-us.html","target":"","nav_menu":false,"nonclickable":false},{"id":"483755826367466383","title":"Events","url":"events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"128775996987507720","title":"Training","url":"training.html","target":"","nav_menu":false,"nonclickable":false},{"id":"816957197570644798","title":"Merchandise","url":"merchandise.html","target":"","nav_menu":false,"nonclickable":false}],
 			"128775996987507720",
 			'',
 			'active',
@@ -546,12 +546,6 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     		<li id="pg816957197570644798" class="wsite-menu-item-wrap">
     			<a href="/merchandise.html" class="wsite-menu-item">
     				Merchandise
-    			</a>
-    			
-    		</li>
-    		<li id="pg541476694572481837" class="wsite-menu-item-wrap">
-    			<a href="/contact--feedback.html" class="wsite-menu-item">
-    				Contact / Feedback
     			</a>
     			
     		</li>
