added error page and removed contact from training

--- a/error.html
+++ b/error.html
@@ -142,11 +142,11 @@
   //]]>
 }hookGeo();})()</script>
 		<title>Training</title><meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION">
-<meta property="og:title" content="Training">
-<meta property="og:description" content="Basic Squad Leadership Tactical Layout (Battle flow, positioning, terminology and adapting to different battle dynamics) Strategic Overview (Map reading, population management, choosing targets and...">
+<meta property="og:title" content="Error">
+<meta property="og:description" content="Something went wrong">
 <meta property="og:image" content="/uploads/pslogo1417p.png">
 <meta property="og:image" content="/uploads/ts-logo-vertical-rgb.png?1639140158">
-<meta property="og:url" content="/training.html">
+<meta property="og:url" content="/error.html">
 
 
 
@@ -326,9 +326,9 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<h2 class="wsite-content-title">Training and Education</h2>
+<h2 class="wsite-content-title">Something Went Wrong!</h2>
 
-<div class="paragraph"><font color="#d5d5d5">To take any of these modules, check our <a href="/join-us.html">communication platforms</a> for more info.</font><br></div>
+<div class="paragraph"><font color="#d5d5d5">There seems to be a problem with this site at the moment.<br>Please try refreshing the page or coming back later.</font></div>
 				</div>
 			</div>
           </div>
@@ -341,37 +341,6 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div>
 
     </div>
-
-    <div class="main-wrap">
-      <div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<div class="wsite-section-wrap">
-	<div class="wsite-section wsite-body-section wsite-section-bg-color wsite-background-12" style="background-color: #0f0f0f;background-image: none;">
-		<div class="wsite-section-content">
-          <div class="container">
-			<div class="wsite-section-elements">
-				<h2 class="wsite-content-title">Planetside 2 Modules<br></h2>
-
-<div class="paragraph"><ul><li><font color="#d5d5d5">Basic Squad Leadership</font></li><li><font color="#d5d5d5">Tactical Layout (Battle flow, positioning, terminology and adapting to different battle dynamics)</font></li><li><font color="#d5d5d5">Strategic Overview (Map reading, population management, choosing targets and platoon flow)</font></li><li><font color="#d5d5d5"><a href="/furr.html">FURR </a>(FU Rapid Response) (Contact&nbsp;TCMcQueen58#9307 on Discord for more information)</font></li><li><font color="#d5d5d5">FUGG (FU Galaxy Group) (Coordinated logistics and battle support. Contact&nbsp;Mordus#5149 on Discord for more information)</font></li></ul></div>
-
-<h2 class="wsite-content-title">Universal Modules</h2>
-
-<div class="paragraph" style="text-align:left;"><ul><li><font color="#d5d5d5">Introduction module (Welcome to FUGO! This module is intended to help new members navigate the organisation.)</font></li><li><font color="#d5d5d5">Basic leadership 1 (Discussing the difference between a manager and a leader)</font></li><li><font color="#d5d5d5">Basic leadership 2 (Ethos, culture and empowerment)</font></li><li><font color="#d5d5d5">Meta Module (Applied leadership and organisation models in FUGO. Required for Community Officers.)</font></li></ul></div>
-
-<h2 class="wsite-content-title">Video Library<br></h2>
-
-<div class="wsite-youtube" style="margin-bottom:10px;margin-top:10px;"><div class="wsite-youtube-wrapper wsite-youtube-size-large wsite-youtube-align-left">
-<div class="wsite-youtube-container">
-
-	<iframe width="1903" height="758" src="https://www.youtube.com/embed/Pad14x2Npzs" title="Freelancers Union – Leadership module" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
-</div></div>
-
-<div class="wsite-spacer" style="height:50px;"></div>
-			</div>
-		</div>
-      </div>
-
-	</div>
 </div>
 
 </div>
