--- a/src/error.html
+++ b/src/error.html
@@ -245,7 +245,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 	
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
-			[{"id":"767375547431588406","title":"Home","url":"index.html","target":"","nav_menu":false,"nonclickable":false},{"id":"293859289571949162","title":"Join Us","url":"join-us.html","target":"","nav_menu":false,"nonclickable":false},{"id":"483755826367466383","title":"Events","url":"events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"128775996987507720","title":"Training","url":"training.html","target":"","nav_menu":false,"nonclickable":false},{"id":"816957197570644798","title":"Merchandise","url":"merchandise.html","target":"","nav_menu":false,"nonclickable":false}],
+			[{"id":"767375547431588406","title":"Home","url":"home.html","target":"","nav_menu":false,"nonclickable":false},{"id":"293859289571949162","title":"Join Us","url":"join-us.html","target":"","nav_menu":false,"nonclickable":false},{"id":"483755826367466383","title":"Events","url":"events.html","target":"","nav_menu":false,"nonclickable":false},{"id":"128775996987507720","title":"Training","url":"training.html","target":"","nav_menu":false,"nonclickable":false},{"id":"816957197570644798","title":"Merchandise","url":"merchandise.html","target":"","nav_menu":false,"nonclickable":false}],
 			"128775996987507720",
 			'',
 			'active',
@@ -274,7 +274,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </span></div>
           <div class="nav desktop-nav"><ul class="wsite-menu-default">
 		<li id="pg767375547431588406" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
-			<a href="/index.html" class="wsite-menu-item" style="position: relative;">
+			<a href="/home.html" class="wsite-menu-item" style="position: relative;">
 				Home
 			</a>
 			
