updated og stuff

--- a/src/home.html
+++ b/src/home.html
@@ -10,10 +10,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <meta property="og:site_name" content="FREELANCERS UNION GAMING ORGANIZATION" />
         <meta property="og:title" content="FREELANCERS UNION GAMING ORGANIZATION" />
         <meta property="og:description" content="The Freelancers Union is a multi-game community with multiple activities every week" />
         <meta property="og:image" content="uploads/pslogo1417p.png" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://fugaming.org" />
+        <meta property="og:site_name" content="Freelancers Union" />
+        <meta name="description" content="The Freelancers Union is a multi-game community with multiple activities every week">
         <title>Freelancers Union</title>
 
         <!-- CSS FILES -->        
