Added buttons for TS and Discord

--- a/src/home.html
+++ b/src/home.html
@@ -184,6 +184,8 @@
                                     var ts3v_url_1 = "https://www.tsviewer.com/ts3viewer.php?ID=1119671&text=b3b3b3&text_size=13&text_family=1&text_s_color=ffffff&text_s_weight=bold&text_s_style=normal&text_s_variant=normal&text_s_decoration=underline&text_i_color=ffffff&text_i_weight=normal&text_i_style=normal&text_i_variant=normal&text_i_decoration=none&text_c_color=b3b3b3&text_c_weight=normal&text_c_style=normal&text_c_variant=normal&text_c_decoration=none&text_u_color=ffffff&text_u_weight=normal&text_u_style=normal&text_u_variant=normal&text_u_decoration=none&text_s_color_h=&text_s_weight_h=bold&text_s_style_h=normal&text_s_variant_h=normal&text_s_decoration_h=underline&text_i_color_h=ffffff&text_i_weight_h=bold&text_i_style_h=normal&text_i_variant_h=normal&text_i_decoration_h=none&text_c_color_h=&text_c_weight_h=normal&text_c_style_h=normal&text_c_variant_h=normal&text_c_decoration_h=none&text_u_color_h=&text_u_weight_h=bold&text_u_style_h=normal&text_u_variant_h=normal&text_u_decoration_h=underline&hideEmptyChannels&iconset=default_colored_2014_tsv";
                                     ts3v_display.init(ts3v_url_1, 1119671, 100);
                                     </script>
+                                    <a class="btn custom-btn smoothscroll" href="https://invite.teamspeak.com/ts.fugaming.org/?password=futs" style="margin-top: 30px;" target="_blank">Open TeamSpeak</a>
+
                                 </div>
 
                             </div>
@@ -194,6 +196,8 @@
                                 
                                 <div class="artists-image-wrap">
                                     <iframe src="https://discord.com/widget?id=282514718445273089&theme=dark" width="500" height="700" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                                    <a class="btn custom-btn smoothscroll" href="https://discord.com/invite/axzCaZq" style="margin-top: 30px;" target="_blank">Join Discord</a>
+
                                 </div>
 
                                 
