--- a/src/home.html
+++ b/src/home.html
@@ -31,6 +31,10 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link href="css/templatemo-festava-live.css" rel="stylesheet">
+
+
+        <!-- ANALYTICS -->
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="4be876dc-9d00-42cb-ac6d-6c2d458d0e4f"></script>
         
 
     </head>
@@ -210,23 +214,6 @@
 
 
             <section class="schedule-section section-padding" id="section_4">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-12 text-center">
-                            <h2 class="text-white mb-4">Event Schedule</h2>
-
-                                <div class="calendar-container" style="overflow: hidden; margin: 15px auto;">
-                                    <iframe src="https://calendar.google.com/calendar/embed?src=5tqbl0f85gel1hibqqi3crnjts4gulne%40import.calendar.google.com&ctz=Europe%2FLondon" style="border:solid 1px #777; width: 100%; height: 600px;" frameborder="0" scrolling="no"></iframe>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-            <section class="games-section section-padding" id="section_5">
                 <div class="container">
                     <div class="row justify-content-center">
     
